--- a/index.html
+++ b/index.html
@@ -4,39 +4,43 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Call Hero - Guaranteed 100% Answer Rate For Plumbers</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background-color: #002b5c;
+      background-color: #002b5c; /* Deep blue from logo */
       color: #ffffff;
       text-align: center;
     }
+
     header {
       padding: 20px;
+      text-align: center;
     }
-    h1.logo-text {
-      font-size: 48px;
-      font-weight: 700;
-      letter-spacing: 1px;
-      margin: 0;
-      color: #ffffff;
+
+    header img {
+      max-width: 300px;
+      height: auto;
+      display: block;
+      margin: 0 auto;
     }
+
     h2.sub-header {
       font-size: 20px;
       font-weight: 700;
-      margin: 5px 0 0 0;
+      margin: 10px 0 0 0;
       color: #ffffff;
     }
+
     video {
       max-width: 90%;
-      width: 720px;
       margin: 20px auto;
       display: block;
       border: 3px solid black;
       box-sizing: border-box;
     }
+
     #demo-button {
       opacity: 0;
       pointer-events: none;
@@ -47,8 +51,9 @@
       padding: 12px 24px;
       font-size: 16px;
       cursor: pointer;
-      margin: 20px 0;
+      margin-bottom: 20px;
     }
+
     #calendly-container {
       display: block;
       visibility: hidden;
@@ -62,26 +67,19 @@
 </head>
 <body>
   <header>
-    <h1 class="logo-text">Call Hero</h1>
+    <img src="Call-hero-site-logo.png" alt="Call Hero Logo" />
     <h2 class="sub-header">Recover 100K+ Per Year With A Guaranteed 100% Answer Rate</h2>
   </header>
 
   <video id="hero-video" controls>
-    <source src="https://outreach-video-backup-anthony0.s3.amazonaws.com/videos/superiorplumbing.ca_-_vaughan_-__20250818195128_final.mp4?AWSAccessKeyId=AKIAYNPTUAW6UIJDOLQS&Signature=ZlI58DDfLeNXdI4wQZKRC81959Y%3D&Expires=1758138788" type="video/mp4" />
+    <source src="https://outreach-video-backup-anthony0.s3.amazonaws.com/videos/superiorplumbing.ca_-_vaughan_-__20250818195128_final.mp4?AWSAccessKeyId=AKIAYNPTUAW6UIJDOLQS&Signature=ZlI58DDfLeNXdI4wQZKRC81959Y%3D&Expires=1758138788" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
   <button id="demo-button" onclick="showCalendly()">Request Your Zero Risk Free Trial</button>
 
   <div id="calendly-container">
-    <iframe
-      id="calendly-iframe"
-      src="https://calendly.com/anthonydecaro2005/30min"
-      width="100%"
-      height="600"
-      frameborder="0"
-      scrolling="no"
-    ></iframe>
+    <iframe id="calendly-iframe" src="https://calendly.com/anthonydecaro2005/30min" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
   </div>
 
   <script>
@@ -91,7 +89,7 @@
     setTimeout(() => {
       button.style.opacity = 1;
       button.style.pointerEvents = 'auto';
-    }, 10000);
+    }, 10000); // show button after 10s
 
     function showCalendly() {
       calendlyContainer.style.visibility = 'visible';
