--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <header>
-    <img src="Call-hero-site-logo-2.png" alt="Call Hero Logo" />
+    <img src="call-hero-site-logo-2.png" alt="Call Hero Logo" />
     <h2 class="sub-header">Recover 100K+ Per Year With A Guaranteed 100% Answer Rate</h2>
   </header>
 
@@ -98,5 +98,6 @@
   </script>
 </body>
 </html>
+
 
 
