--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Call Hero - Guaranteed 100% Answer Rate For Plumbers</title>
+
+  <!-- Favicon -->
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597177.png" />
+
+  <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
@@ -14,32 +20,36 @@
       text-align: center;
     }
 
+    /* Header + Logo */
     header {
-      padding: 20px;
+      padding: 40px 20px; /* more padding */
     }
-
     header img {
-      max-width: 280px;
+      max-width: 420px;   /* 1.5x bigger than 280px */
+      width: 90%;
       height: auto;
       display: block;
-      margin: 0 auto;
+      margin: 0 auto 12px;
     }
 
     h2.sub-header {
       font-size: 20px;
       font-weight: 700;
-      margin: 5px 0 0 0;
+      margin: 8px 0 0 0;
       color: #ffffff;
     }
 
+    /* Video */
     video {
-      max-width: 90%;
-      margin: 20px auto;
+      width: 720px;       /* normal desktop size */
+      max-width: 92vw;    /* responsive on mobile */
+      margin: 24px auto;
       display: block;
       border: 3px solid black;
       box-sizing: border-box;
     }
 
+    /* CTA Button */
     #demo-button {
       opacity: 0;
       pointer-events: none;
@@ -53,6 +63,7 @@
       margin-bottom: 20px;
     }
 
+    /* Calendly */
     #calendly-container {
       display: block;
       visibility: hidden;
@@ -66,11 +77,13 @@
 </head>
 <body>
   <header>
+    <!-- Make sure this file exists in the same folder as index.html -->
     <img src="call-hero-site-logo-2.png" alt="Call Hero Logo" />
     <h2 class="sub-header">Recover 100K+ Per Year With A Guaranteed 100% Answer Rate</h2>
   </header>
 
-  <video id="hero-video" autoplay muted playsinline controls>
+  <!-- Try to play with sound; browsers may require user interaction -->
+  <video id="hero-video" controls playsinline>
     <source src="https://outreach-video-backup-anthony0.s3.amazonaws.com/videos/superiorplumbing.ca_-_vaughan_-__20250818195128_final.mp4?AWSAccessKeyId=AKIAYNPTUAW6UIJDOLQS&Signature=ZlI58DDfLeNXdI4wQZKRC81959Y%3D&Expires=1758138788" type="video/mp4">
     Your browser does not support the video tag.
   </video>
@@ -84,7 +97,9 @@
   <script>
     const button = document.getElementById('demo-button');
     const calendlyContainer = document.getElementById('calendly-container');
+    const video = document.getElementById('hero-video');
 
+    // Show CTA after 10s
     setTimeout(() => {
       button.style.opacity = 1;
       button.style.pointerEvents = 'auto';
@@ -95,9 +110,22 @@
       calendlyContainer.style.height = '600px';
       calendlyContainer.scrollIntoView({ behavior: 'smooth', block: 'start' });
     }
+
+    // Attempt to autoplay WITH sound; if blocked, play after first user interaction
+    document.addEventListener('DOMContentLoaded', () => {
+      video.play().catch(() => {
+        // Autoplay with sound blocked; wait for any user gesture
+        const unlock = () => {
+          video.play().catch(() => {/* ignore */});
+          document.removeEventListener('click', unlock);
+          document.removeEventListener('touchstart', unlock);
+          document.removeEventListener('keydown', unlock);
+        };
+        document.addEventListener('click', unlock, { once: true });
+        document.addEventListener('touchstart', unlock, { once: true });
+        document.addEventListener('keydown', unlock, { once: true });
+      });
+    });
   </script>
 </body>
 </html>
-
-
-
