--- a/index.html
+++ b/index.html
@@ -2,55 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Call Hero - Guaranteed 100% Answer Rate For Plumbers</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Call Hero</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background-color: #002b5c;
-      color: #ffffff;
+      padding: 0;
+      background-color: #002f5f;
+      color: white;
+      font-family: Arial, sans-serif;
       text-align: center;
     }
 
     header {
-      padding: 40px 0; /* Equal top & bottom padding */
+      padding: 40px 0; /* Equal top and bottom padding */
     }
 
     header img {
-      max-width: 280px;
-      height: auto;
-      display: block;
-      margin: 0 auto;
+      height: 90px;
+      margin-bottom: 20px;
     }
 
-    h2.sub-header {
-      font-size: 20px;
-      font-weight: 700;
-      margin: 5px 0 0 0;
-      color: #ffffff;
+    h1 {
+      font-size: 1.5em;
+      margin: 0;
     }
 
     #video-wrapper {
       position: relative;
-      display: inline-block;
-      margin: 20px auto;
-      max-width: 100%;
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
     }
 
     video {
-      width: 90%;
+      max-width: 90%;
+      width: 100%;
+      height: auto;
+      max-height: 450px;
       border: 3px solid black;
-      box-sizing: border-box;
-    }
-
-    /* Shrink video on wider screens */
-    @media (min-width: 768px) {
-      video {
-        width: 720px;
-      }
+      border-radius: 8px;
     }
 
     #unmute-overlay {
@@ -58,90 +50,70 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: rgba(0, 0, 0, 0.6);
+      background: rgba(0, 0, 0, 0.5);
       color: white;
-      padding: 20px 30px;
-      font-size: 18px;
-      border-radius: 50px;
-      cursor: pointer;
-      z-index: 10;
-      display: none;
-      user-select: none;
-    }
-
-    #demo-button {
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 1s ease;
-      background-color: #ff0000;
-      color: white;
-      border: none;
-      padding: 12px 24px;
       font-size: 16px;
-      cursor: pointer;
-      margin-bottom: 20px;
+      padding: 12px 18px;
+      border-radius: 100px;
+      z-index: 5;
+      pointer-events: none;
     }
 
-    #calendly-container {
-      display: block;
-      visibility: hidden;
-      margin: 10px auto;
-      max-width: 90%;
-      height: 0;
-      overflow: hidden;
-      transition: height 0.3s ease, visibility 0s linear 0.3s;
+    .cta-button {
+      margin-top: 20px;
+      padding: 12px 24px;
+      background-color: red;
+      color: white;
+      font-size: 16px;
+      border: none;
+      cursor: pointer;
+      border-radius: 4px;
+      text-decoration: none;
+      display: inline-block;
+    }
+
+    .cta-button:hover {
+      background-color: darkred;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="Call-hero-site-logo-2.png" alt="Call Hero Logo" />
-    <h2 class="sub-header">Recover 100K+ Per Year With A Guaranteed 100% Answer Rate</h2>
+    <img src="call-hero-site-logo-2.png" alt="Call Hero Logo" />
+    <h1>Recover 100K+ Per Year With a Guaranteed 100% Answer Rate</h1>
   </header>
 
   <div id="video-wrapper">
-    <video id="hero-video" autoplay muted playsinline controls>
-      <source src="https://outreach-video-backup-anthony0.s3.amazonaws.com/videos/superiorplumbing.ca_-_vaughan_-__20250818195128_final.mp4?AWSAccessKeyId=AKIAYNPTUAW6UIJDOLQS&Signature=ZlI58DDfLeNXdI4wQZKRC81959Y%3D&Expires=1758138788" type="video/mp4">
+    <video id="hero-video" muted autoplay playsinline>
+      <source src="video.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
-    <div id="unmute-overlay" onclick="unmuteVideo()">🔊 Tap to Unmute</div>
+    <div id="unmute-overlay">🔊 Tap to Unmute</div>
   </div>
 
-  <button id="demo-button" onclick="showCalendly()">Request Your Zero Risk Free Trial</button>
-
-  <div id="calendly-container">
-    <iframe id="calendly-iframe" src="https://calendly.com/anthonydecaro2005/30min" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
-  </div>
+  <a href="#form" class="cta-button">Request Your Zero Risk Free Trial</a>
 
   <script>
-    const video = document.getElementById('hero-video');
-    const overlay = document.getElementById('unmute-overlay');
-    const button = document.getElementById('demo-button');
-    const calendlyContainer = document.getElementById('calendly-container');
-
-    // Show button after delay
-    setTimeout(() => {
-      button.style.opacity = 1;
-      button.style.pointerEvents = 'auto';
-    }, 10000);
-
-    function showCalendly() {
-      calendlyContainer.style.visibility = 'visible';
-      calendlyContainer.style.height = '600px';
-      calendlyContainer.scrollIntoView({ behavior: 'smooth', block: 'start' });
-    }
-
-    // Show unmute overlay on load
-    window.addEventListener('load', () => {
+    const video = document.getElementById("hero-video");
+    const overlay = document.getElementById("unmute-overlay");
+  
+    video.addEventListener("click", () => {
       if (video.muted) {
-        overlay.style.display = 'block';
+        video.muted = false;
+        video.currentTime = 0; // ⬅️ Restart video on unmute
+        video.play();
+        overlay.style.display = "none";
       }
     });
-
-    function unmuteVideo() {
-      video.muted = false;
-      overlay.style.display = 'none';
-    }
+  
+    // Optional: Show overlay after a delay if muted and playing
+    setTimeout(() => {
+      if (!video.paused && video.muted) {
+        overlay.style.display = "block";
+      }
+    }, 2000);
   </script>
+
 </body>
 </html>
+
