--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       justify-content: center;
       align-items: center;
       width: 100%;
-      margin-top: var(--section-spacing);
+      margin-top: calc(var(--section-spacing) * 0.5); /* or set a fixed px value like 12px */
     }
 
     #hero-video {
@@ -115,7 +115,7 @@
 <body>
   <header>
     <img src="call-hero-site-logo-2.png" alt="Call Hero Logo" />
-    <div class="headline">Recover 100K+ Per Year With a Guaranteed 100% Answer Rate</div>
+    <div class="headline">I made this video for you...</div>
   </header>
 
   <div id="video-wrapper">
@@ -171,3 +171,4 @@
   </script>
 </body>
 </html>
+
