--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Call Hero</title>
-  <link rel="icon" type="image/png" href="call-hero-site-logo-2.png" />
+  <link rel="icon" type="image/png" href="favicon-2.png" />
   <style>
     body {
       margin: 0;
@@ -15,24 +15,25 @@
     }
 
     header {
-      padding-top: 40px; /* Top padding from screen to logo */
+      padding-top: 20px;
+      padding-bottom: 20px;
     }
 
     #logo {
       height: 90px;
-      margin-bottom: 20px; /* Space between logo and subheadline */
+      margin-bottom: 20px;
     }
 
     h1 {
       font-size: 24px;
       font-weight: bold;
-      margin: 0 0 20px; /* Space between subheadline and video */
+      margin: 0 0 20px 0;
     }
 
     #video-wrapper {
       display: flex;
       justify-content: center;
-      margin: 0 auto 20px; /* Space below video */
+      margin: 0 auto 20px auto;
     }
 
     video {
@@ -54,8 +55,8 @@
       padding: 14px 22px;
       cursor: pointer;
       font-size: 16px;
-      display: none;
       z-index: 10;
+      display: none;
     }
 
     #video-container {
@@ -76,7 +77,7 @@
     }
 
     #calendly {
-      margin-top: 30px;
+      margin-top: 20px;
       display: none;
     }
 
@@ -92,7 +93,7 @@
 
   <header>
     <img id="logo" src="call-hero-site-logo-2.png" alt="Call Hero Logo"/>
-    <h1>Recover 100K+ Per Year With a Guaranteed 100% Answer Rate</h1>
+    <h1>Hi John, I made this video for you:</h1>
   </header>
 
   <div id="video-wrapper">
@@ -125,12 +126,12 @@
       video.muted = false;
       video.currentTime = 0;
       video.play();
-      overlay.style.display = 'none';
+      overlay.style.display = 'none'; // ✅ Remove overlay after click
     });
 
     setTimeout(() => {
       cta.style.display = 'inline-block';
-    }, 10000); // Show CTA after 10 seconds
+    }, 10000);
 
     cta.addEventListener('click', () => {
       calendly.style.display = 'block';
