--- a/index.html
+++ b/index.html
@@ -3,45 +3,45 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Call Hero</title>
+  <title>Call Hero - Guaranteed 100% Answer Rate For Plumbers</title>
   <link rel="icon" type="image/png" href="favicon-2.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Arial', sans-serif;
+      font-family: 'Poppins', sans-serif;
       background-color: #002b5c;
-      color: white;
+      color: #ffffff;
       text-align: center;
-    }
-
-    header {
-      padding-top: 20px;
-      padding-bottom: 20px;
+      padding: 20px;
     }
 
     #logo {
-      height: 90px;
-      margin-bottom: 20px;
+      max-width: 280px;
+      height: auto;
+      margin: 20px auto;
     }
 
     h1 {
-      font-size: 24px;
-      font-weight: bold;
-      margin: 0 0 20px 0;
+      margin: 20px 0;
+      font-size: 22px;
     }
 
     #video-wrapper {
       display: flex;
       justify-content: center;
-      margin: 0 auto 20px auto;
+      margin: 20px 0;
+    }
+
+    #video-container {
+      position: relative;
+      max-width: 90%;
     }
 
     video {
-      width: 90%;
-      max-width: 640px;
-      height: auto;
+      width: 100%;
       border: 3px solid black;
-      border-radius: 10px;
+      box-sizing: border-box;
     }
 
     #unmute-overlay {
@@ -49,48 +49,48 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: rgba(50, 50, 50, 0.7);
+      background-color: rgba(128, 128, 128, 0.7);
       color: white;
+      padding: 12px 20px;
       border-radius: 50px;
-      padding: 14px 22px;
-      cursor: pointer;
       font-size: 16px;
-      z-index: 10;
+      cursor: pointer;
       display: none;
-    }
-
-    #video-container {
-      position: relative;
-      display: inline-block;
     }
 
     #cta-button {
-      background-color: red;
+      background-color: #ff0000;
       color: white;
-      padding: 14px 28px;
-      font-size: 18px;
       border: none;
-      border-radius: 6px;
+      padding: 12px 24px;
+      font-size: 16px;
       cursor: pointer;
-      margin: 20px auto 0;
       display: none;
+    }
+
+    #cta-subtext {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 14px;
+      color: #ffffff;
     }
 
     #calendly {
-      margin-top: 20px;
       display: none;
+      margin-top: 10px;
+      max-width: 90%;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     iframe {
-      width: 90%;
-      max-width: 600px;
+      width: 100%;
       height: 600px;
       border: none;
     }
   </style>
 </head>
 <body>
-
   <header>
     <img id="logo" src="call-hero-site-logo-2.png" alt="Call Hero Logo"/>
     <h1>Hi John, I made this video for you:</h1>
@@ -98,7 +98,7 @@
 
   <div id="video-wrapper">
     <div id="video-container">
-      <video id="hero-video" muted playsinline autoplay controls preload="auto">
+      <video id="hero-video" muted playsinline preload="auto" controls>
         <source src="https://outreach-video-backup-anthony0.s3.amazonaws.com/videos/superiorplumbing.ca_-_vaughan_-__20250818195128_final.mp4?AWSAccessKeyId=AKIAYNPTUAW6UIJDOLQS&Signature=ZlI58DDfLeNXdI4wQZKRC81959Y%3D&Expires=1758138788" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
@@ -107,6 +107,10 @@
   </div>
 
   <button id="cta-button">Request Your Zero Risk Free Trial</button>
+
+  <p id="cta-subtext">
+    For 2 weeks we will handle every call you were about to miss. It's free and takes 0 set-up time on your end.
+  </p>
 
   <div id="calendly">
     <iframe src="https://calendly.com/anthonydecaro2005/30min" loading="lazy"></iframe>
@@ -118,9 +122,9 @@
     const cta = document.getElementById('cta-button');
     const calendly = document.getElementById('calendly');
 
-    // Show unmute overlay when video is ready
     video.addEventListener('canplay', () => {
-      overlay.style.display = 'flex';
+      overlay.style.display = 'block';
+      video.play();
     });
 
     overlay.addEventListener('click', async () => {
@@ -135,7 +139,6 @@
       }
     });
 
-    // Show CTA button after 10 seconds
     setTimeout(() => {
       cta.style.display = 'inline-block';
     }, 10000);
@@ -145,3 +148,5 @@
       calendly.scrollIntoView({ behavior: 'smooth' });
     });
   </script>
+</body>
+</html>
