--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     #logo {
       max-width: 280px;
       height: auto;
-      margin: 20px auto;
+      margin: 0px auto;
     }
 
     h1 {
-      margin: 20px 0;
+      margin: 0px 0;
       font-size: 22px;
       font-weight: 700;
     }
@@ -31,7 +31,7 @@
     #video-wrapper {
       display: flex;
       justify-content: center;
-      margin: 20px 0;
+      margin: 0px 0;
     }
 
     #video-container {
@@ -64,17 +64,17 @@
       background-color: #ff0000;
       color: white;
       border: none;
-      padding: 12px 24px;
+      padding: 10px 20px;
       font-size: 16px;
       cursor: pointer;
       display: none;
-      margin-top: 20px;
+      margin-top: 0px;
     }
 
     #cta-subtext {
       display: none;
-      margin-top: 10px;
-      margin-bottom: 10px;
+      margin-top: 0px;
+      margin-bottom: 20px;
       font-size: 14px;
       font-weight: normal;
       color: #ffffff;
@@ -112,7 +112,7 @@
   </div>
 
   <button id="cta-button">Request Your Zero Risk Free Trial</button>
-  <p id="cta-subtext">For 2 weeks we will handle every call you were about to miss. It's free and takes 0 set-up time on your end.</p>
+  <p id="cta-subtext">Expect 20%+ More Booked Jobs.</p>
 
   <div id="calendly">
     <iframe src="https://calendly.com/anthonydecaro2005/30min" loading="lazy"></iframe>
@@ -154,3 +154,4 @@
   </script>
 </body>
 </html>
+
