--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   </div>
 
   <button id="cta-button">Request Your Zero Risk Free Trial</button>
-  <p id="cta-subtext">Expect 20%+ More Booked Jobs.</p>
+  <p id="cta-subtext">Only if you can handle 20%+ More Booked Jobs.</p>
 
   <div id="calendly">
     <iframe src="https://calendly.com/anthonydecaro2005/30min" loading="lazy"></iframe>
@@ -154,4 +154,5 @@
   </script>
 </body>
 </html>
+
 
