--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     #video-wrapper {
       display: flex;
       justify-content: center;
-      margin: 0px 0;
+      margin: 45px 45px;
     }
 
     #video-container {
       position: relative;
       width: 100%;
-      max-width: 640px;
+      max-width: 720px;
     }
 
     video {
@@ -64,7 +64,7 @@
       background-color: #ff0000;
       color: white;
       border: none;
-      padding: 10px 20px;
+      padding: 30px 30px;
       font-size: 16px;
       cursor: pointer;
       display: none;
@@ -112,7 +112,7 @@
   </div>
 
   <button id="cta-button">Request Your Zero Risk Free Trial</button>
-  <p id="cta-subtext">Only if you can handle 20%+ More Booked Jobs.</p>
+  <p id="cta-subtext">$0 Dollars Invested, 0 Set-Up Time Invested, 0 Regularly Answered Calls Risked.</p>
 
   <div id="calendly">
     <iframe src="https://calendly.com/anthonydecaro2005/30min" loading="lazy"></iframe>
@@ -154,5 +154,6 @@
   </script>
 </body>
 </html>
+
 
 
