--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     h1 {
-      margin: 0px 0;
+      margin: 0px 20px;
       font-size: 22px;
       font-weight: 700;
     }
@@ -74,7 +74,7 @@
     #cta-subtext {
       display: none;
       margin-top: 20px;
-      margin-bottom: 20px;
+      margin-bottom: 45px;
       font-size: 14px;
       font-weight: normal;
       color: #ffffff;
@@ -112,7 +112,7 @@
   </div>
 
   <button id="cta-button">Request Your Zero Risk Free Trial</button>
-  <p id="cta-subtext">$0 Dollars Invested, 0 Set-Up Time Invested, 0 Regularly Answered Calls Risked.</p>
+  <p id="cta-subtext">$0 Dollars, 0 Set-Up Time, 0 Regularly Answered Calls Risked.</p>
 
   <div id="calendly">
     <iframe src="https://calendly.com/anthonydecaro2005/30min" loading="lazy"></iframe>
@@ -154,6 +154,7 @@
   </script>
 </body>
 </html>
+
 
 
 
