--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     #logo {
       max-width: 280px;
       height: auto;
-      margin: 0px auto;
+      margin: 0px 45px;
     }
 
     h1 {
@@ -66,6 +66,7 @@
       border: none;
       padding: 10px 10px;
       font-size: 16px;
+      font-weight: normal;
       cursor: pointer;
       display: none;
       margin-top: 0px;
@@ -76,7 +77,6 @@
       margin-top: 20px;
       margin-bottom: 45px;
       font-size: 14px;
-      font-weight: normal;
       color: #ffffff;
     }
 
@@ -154,6 +154,7 @@
   </script>
 </body>
 </html>
+
 
 
 
