--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     #logo {
       max-width: 280px;
       height: auto;
-      margin: 0px 45px;
+      margin: 0px auto;
+      margin-bottom: 45px;
     }
 
     h1 {
@@ -154,6 +155,7 @@
   </script>
 </body>
 </html>
+
 
 
 
