--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       max-width: 280px;
       height: auto;
       margin: 0px auto;
-      margin-bottom: 45px;
+      margin-bottom: 20px;
     }
 
     h1 {
@@ -67,10 +67,12 @@
       border: none;
       padding: 10px 10px;
       font-size: 16px;
-      font-weight: normal;
+      font-weight: strong;
       cursor: pointer;
       display: none;
       margin-top: 0px;
+      opacity: 0;
+      transition: opacity 1s ease-in;
     }
 
     #cta-subtext {
@@ -79,6 +81,8 @@
       margin-bottom: 45px;
       font-size: 14px;
       color: #ffffff;
+      opacity: 0;
+      transition: opacity 1s ease-in;
     }
 
     #calendly {
@@ -155,6 +159,7 @@
   </script>
 </body>
 </html>
+
 
 
 
