--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     #logo {
       max-width: 280px;
       height: auto;
-      margin: 0px auto;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
+      margin-bottom: 15px;
     }
 
     h1 {
@@ -55,7 +55,7 @@
       background-color: rgba(128, 128, 128, 0.7);
       color: white;
       padding: 12px 20px;
-      border-radius: 50px;
+      border-radius: 100px;
       font-size: 16px;
       cursor: pointer;
       display: none;
@@ -148,8 +148,8 @@
     });
 
     setTimeout(() => {
-      cta.style.display = 'inline-block';
-      subtext.style.display = 'block';
+      cta.style.opacity = 1;
+      subtext.style.opacity = 1;
     }, 10000);
 
     cta.addEventListener('click', () => {
@@ -159,6 +159,7 @@
   </script>
 </body>
 </html>
+
 
 
 
