--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       transform: translate(-50%, -50%);
       background-color: rgba(128, 128, 128, 0.7);
       color: white;
-      padding: 12px 20px;
+      padding: 30px 30px;
       border-radius: 100px;
       font-size: 16px;
       cursor: pointer;
@@ -66,8 +66,9 @@
       color: white;
       border: none;
       padding: 10px 10px;
+      font-family: 'Poppins', sans-serif;
       font-size: 16px;
-      font-weight: strong;
+      font-weight: 700;
       cursor: pointer;
       display: none;
       margin-top: 0px;
@@ -117,7 +118,7 @@
   </div>
 
   <button id="cta-button">Request Your Zero Risk Free Trial</button>
-  <p id="cta-subtext">$0 Dollars, 0 Set-Up Time, 0 Regularly Answered Calls Risked.</p>
+  <p id="cta-subtext">$0 Dollars, 0 Set-Up Time, Only Calls You Were About To Miss.</p>
 
   <div id="calendly">
     <iframe src="https://calendly.com/anthonydecaro2005/30min" loading="lazy"></iframe>
@@ -163,3 +164,4 @@
   </script>
 </body>
 </html>
+
