--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       transform: translate(-50%, -50%);
       background-color: rgba(128, 128, 128, 0.7);
       color: white;
-      padding: 30px 30px;
+      padding: 22px 22px;
       border-radius: 100px;
       font-size: 16px;
       cursor: pointer;
@@ -118,7 +118,7 @@
   </div>
 
   <button id="cta-button">Request Your Zero Risk Free Trial</button>
-  <p id="cta-subtext">$0 Dollars, 0 Set-Up Time, Only Calls You Were About To Miss.</p>
+  <p id="cta-subtext">$0 Dollars, 0 Set-Up Time, 0 Comittment.</p>
 
   <div id="calendly">
     <iframe src="https://calendly.com/anthonydecaro2005/30min" loading="lazy"></iframe>
@@ -164,4 +164,5 @@
   </script>
 </body>
 </html>
+
 
