--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   </div>
 
   <button id="cta-button">Request Your Zero Risk Free Trial</button>
-  <p id="cta-subtext">$0 Dollars, 0 Set-Up Time, Only Upside.</p>
+  <p id="cta-subtext">$0 Dollars, 0 Set-Up Time, Only Missed Calls Answered.</p>
 
   <div id="calendly">
     <iframe src="https://calendly.com/anthonydecaro2005/30min" loading="lazy"></iframe>
@@ -164,6 +164,7 @@
   </script>
 </body>
 </html>
+
 
 
 
